<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@android:color/black"
        android:id="@+id/constrained_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".FormSubmission">

    <com.google.android.material.appbar.AppBarLayout
        android:backgroundTint="@android:color/black"
        android:id="@+id/appBarLayout"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <LinearLayout
                android:background="@drawable/gads"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

        <TextView
            android:id="@+id/submission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:text="@string/project_submission"
            android:textColor="#FF9800"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:background="#FF9800"
            android:backgroundTint="#FF9800"
            app:layout_constraintBottom_toTopOf="@+id/first_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:background="@android:color/white"
        android:hint="@string/first_name"
        android:id="@+id/first_name_layout"
        android:inputType="textPersonName"
        android:layout_height="57dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/email_layout"
        app:layout_constraintEnd_toStartOf="@+id/last_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/last_name_layout" />

    <EditText
        android:background="#FFFFFF"
        android:hint="@string/last_name"
        android:id="@+id/last_name_layout"
        android:inputType="textPersonName"
        android:layout_height="58dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:padding="15dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name_layout" />

    <EditText
        android:background="#FFFFFF"
        android:hint="@string/email_address"
        android:id="@+id/email_layout"
        android:inputType="textEmailAddress"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:background="#FFFFFF"
        android:hint="@string/project_on_github_link"
        android:id="@+id/github_layout"
        android:inputType="textUri"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_width="0dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout" />

    <Button
        android:background="@drawable/image_rounded_corner"
        android:backgroundTint="#FF9800"
        android:id="@+id/submit_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
